<resources>
    <string name="app_name">LecShare</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="rePassword">Re-Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="idNumber">Student\'s ID number</string>
    <string name="login">Sign in</string>
    <string name="newAccount">Sign up here!</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="welcome">Welcome to LecShare</string>
    <string name="resetPass">Reset password.</string>
    <string name="titleResetPass">Forgot password.</string>
    <string name="text_logout">Logout</string>
    <string name="text_home">Home</string>
    <string name="text_profile">Profile</string>
</resources>
