<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/fragment_title_register"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="40dp"
            android:background="#fbfbfb"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <TextView
                android:hint="@string/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:ems="10"
                />

            <Button
                android:id="@+id/login_login_button"
                android:hint="@string/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/login_new_account"
                android:hint="@string/newAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/login_forget_password"
                android:hint="@string/forgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginTop="-19dp"/>

            <android.support.constraint.Guideline
                android:id="@+id/login_guideline"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <!--temporary button-->
            <Button
                android:id="@+id/login_skip_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="skip"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>