<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="#2D3047"
        android:orientation="vertical"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColorHint="#fbfbfb"
            android:hint="@string/titleResetPass" />

        <EditText
            android:id="@+id/sendMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#ffffff"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:hint="@string/resetPass" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>